Außerdem ist sichergestellt, dass die Anzeige immer gleich aussieht.
Und es ist natürlich weniger Code bei der Verwendung

- Dienstzeiteneinträge können in der Übersicht jetzt auch gelöscht werden.
In der ausgeklappten Ansicht sind "Delete"-Buttons die dann immer den ganzen Bereich zwischen Beginn/Ende eines Typs löschen.
Aktuell wird die Ansicht noch nicht sofort aktualisiert, man muss erst raus und wieder rein




2023-03-06
- Frisch versendete Nachrichten werden auf der richtigen, also eigenen, Seite angezeigt.

- Die Stimmungsoptionen bei den Dienstzeiten werden jetzt von einem Model aus der App geladen, können so also relativ leicht geändert werden.

- Deutsche Texte bei den Dienstzeiten erstellt.

- Vernünftigen DatePicker gebaut (bis auf schickes Layout)

- TimePicker gebaut (ist nur das Wheel aus dem alten Date+Timepicker) weiß noch nicht, ob das so bleiben soll.

- DatePicker und TimePicker im Anlegen eines Termins eingebaut



2023-03-05
- Direkt nach dem Login wurde das Profilbild nicht geladen, erst wenn man das Profil geschlossen und wieder geöffnet hat. Jetzt sofort nach Login

- Direkt nach dem Login werden jetzt auch die Nachrichten Updates geladen, das ist sonst nur dann passiert wenn jemand eine Nachricht geschrieben hatte.

- Bereiche, Rechtegruppe, Termine und Terminvorlagen sind jetzt einer App zugeordnet, das hatte ich vorher einfach vergessen

- Wenn man Owner eines Bereichs ist, dann wird das jetzt angezeigt in der Bereichsübersicht, entsprechend kann man den Bereich nicht verlassen

- Einen Bereich zu löschen wird nur noch angeboten, wenn man auch der Owner dieses Bereichs ist

- Man kann jetzt den Zugang zu einem Bereich per Admin beantragen. Das wird dann auch angezeigt. Bisher kann aber niemand die Anträge bearbeiten.

- Im Profil kann jetzt ein neues Passwort gesetzt werden. Da man leicht per Code-Request einloggen kann, wenn man sein Passwort vergessen hat, verzichten wir hier auf die doppelte Eingabe des Passworts